remoteDeploy/files2zip/iptables
# ACCEPT STARLINK DENVER
-A INPUT -i eth0 -s 98.97.104.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.105.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.106.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.107.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.108.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.109.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.110.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.111.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.152.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.153.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.154.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.155.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.156.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.157.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.158.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 98.97.159.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.120.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.121.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.122.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.123.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.124.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.125.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.126.0/24 -p tcp --dport 12222 -j ACCEPT
-A INPUT -i eth0 -s 216.147.127.0/24 -p tcp --dport 12222 -j ACCEPT
# /STARLINK DENVER
